fix for crash when dialog overflows

--- a/src/components/Dialog/Dialog.scss
+++ b/src/components/Dialog/Dialog.scss
@@ -17,7 +17,7 @@ $dialog-section-padding: 20px;
         display: block;
         line-height: 100vh;
         text-align: center;
-        height: 100%;
+        height: 100vh;
     }
 
     &.is-animatingOpen {
@@ -100,7 +100,7 @@ $dialog-section-padding: 20px;
 
             .dialog-content {
                 display: flex;
-                max-height: calc(100% - 82px);
+                max-height: calc(100vh - 218px);
                 overflow-y: auto;
                 height: 100%;
                 padding-right: 20px;
